Update Swagger Annotation
- IaaS > Zabbix 파트 작성.
